--- a/index.html
+++ b/index.html
@@ -5,7 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;600&family=Montserrat:wght@200&family=Noto+Sans:ital,wght@0,200;0,600;1,300&family=PT+Serif:wght@700&family=Playfair+Display:wght@400;700&family=Quicksand&display=swap" rel="stylesheet">
+  <!-- <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"></script> -->
+  <script type="importmap">
+    {
+      "imports": {
+        "@hotwired/stimulus": "https://unpkg.com/@hotwired/stimulus/dist/stimulus.js"
+      }
+    }
+  </script>
+
   <title>Isla's Beach Bar</title>
+  <!-- <h1>test</h1> -->
 </head>
 <body>
   <div class="container">
@@ -14,15 +27,18 @@
       <div class="info"><i class="fa-solid fa-info"></i></div>
       <div class="bar-status"><i class="fa-solid fa-circle"></i>Open</div>
       <!-- logo here -->
-      <img class="bar-logo" src="images/Isla's Beach bar logo.png" alt="Isla's logo">
+      <img class="bar-logo" src="images/Isla's Beach bar logo big.png" alt="Isla's logo">
     </div>
 
     <div class="menu">
       <div class="table"><span>Table #</span><span class="table-num">22</span></div>
       <h1 class="bar-title">Isla's Beach Bar</h1>
-      <!-- would be cool to add a search bar here -->
-      <div class="search"><i class="fa-solid fa-magnifying-glass"></i>Search bar here</div>
-
+      <!-- added a search bar here -->
+      <div class="searchbar">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="search" id="search" placeholder="Search menu" data-controller="search-bar">
+      </div>
+      <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
       <!-- food content will go here -->
 
       <div class="menu-content">
@@ -106,5 +122,6 @@
 
     <br>
   </div>
+  <script src="./javascript/application.js"></script>
 </body>
 </html>
