html and css all done

--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@
 
       </div>
     </div>
-
+    <footer class="menu-footer">© Copyright 2023</footer>
+    <br>
+    <footer class="menu-footer">Made with <i class="fa-solid fa-heart"></i> by Nicole Moncrieffe</footer>
     <br>
   </div>
   <script src="./javascript/application.js"></script>
