added dynamic open and closed status button to bar_status button

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;600&family=Montserrat:wght@200&family=Noto+Sans:ital,wght@0,200;0,600;1,300&family=PT+Serif:wght@700&family=Playfair+Display:wght@400;700&family=Quicksand&display=swap" rel="stylesheet">
+  <title>Isla's Beach Bar</title>
   <!-- <script async src="https://ga.jspm.io/npm:es-module-shims@1.6.3/dist/es-module-shims.js"></script> -->
   <script type="importmap">
     {
@@ -16,8 +17,8 @@
       }
     }
   </script>
+  <script src="javascript/application.js" type="module"></script>
 
-  <title>Isla's Beach Bar</title>
   <!-- <h1>test</h1> -->
 </head>
 <body>
@@ -25,7 +26,13 @@
     <div class="bar-banner">
       <img class="bar-img" src="https://patinahotels.com/assets/img/site_images/maldives/maldives-dining-fari-beach-club.jpg" alt="beachbar">
       <div class="info"><i class="fa-solid fa-info"></i></div>
-      <div class="bar-status"><i class="fa-solid fa-circle"></i>Open</div>
+      <!-- open button here -->
+      <div class="bar-status"
+        data-controller="bar-status">
+        <i class="fa-solid fa-circle" data-bar-status-target="dot"></i>
+        <span data-bar-status-target="text"></span>
+      </div>
+
       <!-- logo here -->
       <img class="bar-logo" src="images/Isla's Beach bar logo big.png" alt="Isla's logo">
     </div>
@@ -36,7 +43,7 @@
       <!-- added a search bar here -->
       <div class="searchbar">
         <i class="fa-solid fa-magnifying-glass"></i>
-        <input type="search" id="search" placeholder="Search menu" data-controller="search-bar">
+        <input type="search" id="search" placeholder="Search menu" data-controller="search-bar" data-action="input->search-bar#search">
       </div>
       <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
       <!-- food content will go here -->
@@ -47,23 +54,23 @@
           <h3 class="cat-title">Foods</h3>
           <h3 class="cat-subtitle">Crispy Salads</h3>
           <!-- food cards here -->
-          <div class="menu-card">
+          <div class="menu-card" data-search-bar-target="menuCard">
             <h4 class="item-name">Greek Village Salad with Feta</h4>
             <p class="item-details">Tomato, cucumber, green pepper, red onion, feta in a rich salad</p>
             <p class="item-price">£10.00</p>
           </div>
-          <div class="menu-card">
+          <div class="menu-card" data-search-bar-target="menuCard">
             <h4 class="item-name">Beluga Salad</h4>
             <p class="item-details">Beluga lentils, tomatoes, baked beetroot and goat cheese on a bed of salad</p>
             <p class="item-price">£14.00</p>
           </div>
           <h3 class="cat-subtitle">Seafood</h3>
-          <div class="menu-card">
+          <div class="menu-card" data-search-bar-target="menuCard">
             <h4 class="item-name">Crispy Baby Calamari</h4>
             <p class="item-details">Served with Greek pita, basil pesto and smoked aubergine</p>
             <p class="item-price">£13.50</p>
           </div>
-          <div class="menu-card">
+          <div class="menu-card" data-search-bar-target="menuCard">
             <h4 class="item-name">Grilled Prawn Taco</h4>
             <p class="item-details">Filled with tarama (fish roe) and cucumber salad</p>
             <p class="item-price">£13.50</p>
@@ -76,12 +83,12 @@
           <h3 class="cat-title">Drinks</h3>
           <h3 class="cat-subtitle">Cocktails & Mocktails</h3>
           <!-- drink cards here -->
-          <div class="menu-card">
+          <div class="menu-card" data-search-bar-target="menuCard">
             <h4 class="item-name">Strawberry Daiquiri</h4>
             <p class="item-details">Bacardi Rum, Strawberry Liqueur, Lime juice, sugar syrup and strawberry</p>
             <p class="item-price">£9.00</p>
           </div>
-          <div class="menu-card">
+          <div class="menu-card" data-search-bar-target="menuCard">
             <h4 class="item-name">Woo Woo</h4>
             <p class="item-details">Peach Schnapps, Vodka and Cranberry Juice</p>
             <p class="item-price">£8.50</p>
@@ -92,7 +99,7 @@
             <p class="item-details">Black Cherry, Black Currant, Baking Spices, and Cedar </p>
             <p class="item-price">£9.00</p>
           </div>
-          <div class="menu-card">
+          <div class="menu-card" data-search-bar-target="menuCard">
             <h4 class="item-name">Syrah red wine</h4>
             <p class="item-details">Blueberry, plum, tobacco, cured meat, black pepper, violet</p>
             <p class="item-price">£9.00</p>
@@ -104,12 +111,12 @@
           <h3 class="cat-title">Desserts</h3>
           <h3 class="cat-subtitle">Creamy desserts</h3>
           <!-- dessert cards here -->
-          <div class="menu-card">
+          <div class="menu-card" data-search-bar-target="menuCard">
             <h4 class="item-name">Chocolate Mousse with Salted Caramel and Mochi</h4>
             <p class="item-details">Dark chocolate, creme fraiche and Awon snow rice cake mochi</p>
             <p class="item-price">£14.00</p>
           </div>
-          <div class="menu-card">
+          <div class="menu-card" data-search-bar-target="menuCard">
             <h4 class="item-name">Banoffee cream pudding with white choc crumble</h4>
             <p class="item-details">White chocolate, roasted macadamias and bananas, topped with maple syrup</p>
             <p class="item-price">£12.00</p>
@@ -124,6 +131,5 @@
     <footer class="menu-footer">Made with <i class="fa-solid fa-heart"></i> by Nicole Moncrieffe</footer>
     <br>
   </div>
-  <script src="./javascript/application.js"></script>
 </body>
 </html>
