menu now reverts back to original layout

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
       <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
       <!-- food content will go here -->
 
+      <p class="search-results" data-search-bar-target="noResults">No results match your search</p>
       <div class="menu-content">
-        <!-- <p class="search-results"></p> -->
         <div id="food">
           <span class="menu-title" data-search-bar-target="menuTitle">
             <h3 class="cat-title">Foods</h3>
